--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "TorToolkit-Telegram",
     "description": "Telegram leecher bot with python",
-    "logo": "https://raw.githubusercontent.com/devillD/TorToolkit-Telegram/heroku/toolkit.jpg",
+    "logo": "https://cdn.jsdelivr.net/gh/dbmovies/index/DBMovies.JPG",
     "keywords": [
       "telegram",
       "bot",
@@ -16,7 +16,7 @@
         }
       }
     ],
-    "repository": "https://github.com/devillD/TorToolkit-Telegram",
+    "repository": "https://github.com/DBMovies0075/TortoolkitHeroku-DEVILID",
     "website": "https://github.com/devillD/TorToolkit-Telegram/tree/heroku",
     "success_url": "https://github.com/devillD/TorToolkit-Telegram/blob/heroku/readme.md",
     "stack": "container",
